--- a/apps/evm/package.json
+++ b/apps/evm/package.json
@@ -17,19 +17,16 @@
   },
   "dependencies": {
     "@binance/w3w-wagmi-connector-v2": "1.2.4-alpha.0",
-    "@gobob/bob-sdk": "^3.1.0",
     "@dynamic-labs/bitcoin": "^3.6.2",
     "@dynamic-labs/ethereum": "^3.6.2",
     "@dynamic-labs/iconic": "^3.6.2",
     "@dynamic-labs/sdk-react-core": "^3.6.2",
     "@dynamic-labs/wagmi-connector": "^3.6.2",
-    "@eth-optimism/sdk": "^3.1.6",
-    "@ethersproject/providers": "^5.7.2",
+    "@gobob/bob-sdk": "^3.1.0",
     "@gobob/chains": "workspace:^",
     "@gobob/currency": "workspace:^",
     "@gobob/hooks": "workspace:^",
     "@gobob/icons": "workspace:^",
-    "@gobob/sats-wagmi": "workspace:^",
     "@gobob/tokens": "workspace:^",
     "@gobob/ui": "workspace:^",
     "@gobob/utils": "workspace:^",
@@ -43,11 +40,12 @@
     "@scure/base": "^1.1.9",
     "@scure/btc-signer": "^1.4.0",
     "@sentry/nextjs": "catalog:",
-    "@tanstack/react-store": "catalog:",
     "@tanstack/react-query": "catalog:",
+    "@tanstack/react-store": "catalog:",
     "@vercel/kv": "catalog:",
     "@wagmi/core": "catalog:",
     "big.js": "catalog:",
+    "bitcoin-address-validation": "catalog:",
     "date-fns": "catalog:",
     "graphql-request": "catalog:",
     "lottie-react": "^2.4.0",
@@ -63,8 +61,8 @@
     "use-count-up": "^3.0.1",
     "usehooks-ts": "catalog:",
     "viem": "catalog:",
-    "yup": "catalog:",
-    "wagmi": "catalog:"
+    "wagmi": "catalog:",
+    "yup": "catalog:"
   },
   "devDependencies": {
     "@gobob/test-utils": "workspace:^",
